--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "~12.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "bootstrap": "^5.1.0",
+    "@popperjs/core": "^2.10.1",
+    "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
